--- a/MyTeam.html
+++ b/MyTeam.html
@@ -7,18 +7,46 @@
         <link rel="stylesheet" href="./dist/style.css" />
         </head>
 
-    <header>
-        <h1 id="title">Team Card Generator!</h1>
-    </header>
-
-    <body class="body" >
-        <h1> Team Cards </h1>
+    <body>
+        <h1 id="header"> Team Cards </h1>
         <!-- Team cards will go here-->
-        <div id='teamHTML'><h1>Intern</h1>
+        <div class="body" id='teamHTML'><div class="engineer-card">
+                     <h1>Engineer</h1>
+                     <p>My name is abbi </p>
+                     <p>My ID number is 8</p>
+                     <p>My email address is 8</p>
+                     <p>I attend 8</p>
+                     </div><div class="engineer-card">
+                     <h1>Engineer</h1>
+                     <p>My name is amy </p>
+                     <p>My ID number is 9</p>
+                     <p>My email address is 9</p>
+                     <p>I attend 9</p>
+                     </div><div class="intern-card">
+                    <h1>Intern</h1>
                     <p>My name is cath </p>
-                    <p>My ID number is c12344</p>
-                    <p>My email address is cath@tmail</p>
-                    <p>I attend tulane</p><!-- Each team card -->
+                    <p>My ID number is 9</p>
+                    <p>My email address is 9</p>
+                    <p>I attend 9</p>
+                    </div><div class="intern-card">
+                    <h1>Intern</h1>
+                    <p>My name is bruno </p>
+                    <p>My ID number is 9</p>
+                    <p>My email address is 9</p>
+                    <p>I attend 9</p>
+                    </div><div class="manager-card">
+                    <h1>Manager</h1>
+                    <p>My name is caleb </p>
+                    <p>My ID number is 8</p>
+                    <p>My email address is 8</p>
+                    <p> My phone number is 8</p>
+                    </div><div class="manager-card">
+                    <h1>Manager</h1>
+                    <p>My name is caleb </p>
+                    <p>My ID number is 78</p>
+                    <p>My email address is 7</p>
+                    <p> My phone number is 7</p>
+                    </div><!-- Each team card -->
         </div>
 
     </body>
