--- a/MyTeam.html
+++ b/MyTeam.html
@@ -7,45 +7,39 @@
         <link rel="stylesheet" href="./dist/style.css" />
         </head>
 
-    <body>
+    <body class="body" >
         <h1 id="header"> Team Cards </h1>
         <!-- Team cards will go here-->
-        <div class="body" id='teamHTML'><div class="engineer-card">
-                     <h1>Engineer</h1>
-                     <p>My name is abbi </p>
-                     <p>My ID number is 8</p>
-                     <p>My email address is 8</p>
-                     <p>I attend 8</p>
-                     </div><div class="engineer-card">
-                     <h1>Engineer</h1>
-                     <p>My name is amy </p>
-                     <p>My ID number is 9</p>
-                     <p>My email address is 9</p>
-                     <p>I attend 9</p>
-                     </div><div class="intern-card">
+        <div id='teamHTML'><div class="intern-card">
                     <h1>Intern</h1>
-                    <p>My name is cath </p>
-                    <p>My ID number is 9</p>
-                    <p>My email address is 9</p>
-                    <p>I attend 9</p>
+                    <p>My name is Robby </p>
+                    <p>My ID number is 765</p>
+                    <p>My email address is Robbt@intern.com</p>
+                    <p>I attend Rutgers</p>
                     </div><div class="intern-card">
                     <h1>Intern</h1>
-                    <p>My name is bruno </p>
-                    <p>My ID number is 9</p>
-                    <p>My email address is 9</p>
-                    <p>I attend 9</p>
-                    </div><div class="manager-card">
+                    <p>My name is Lily </p>
+                    <p>My ID number is 908</p>
+                    <p>My email address is lily@intern.com</p>
+                    <p>I attend Tulane</p>
+                    </div><div class="engineer-card">
+                     <h1>Engineer</h1>
+                     <p>My name is Laura </p>
+                     <p>My ID number is 123</p>
+                     <p>My email address is laura@engineer.com</p>
+                     <p>I attend lauralikescoding</p>
+                     </div><div class="engineer-card">
+                     <h1>Engineer</h1>
+                     <p>My name is Bruno </p>
+                     <p>My ID number is 345</p>
+                     <p>My email address is bruno@engineer.com</p>
+                     <p>I attend brunoiscool</p>
+                     </div><div class="manager-card">
                     <h1>Manager</h1>
-                    <p>My name is caleb </p>
-                    <p>My ID number is 8</p>
-                    <p>My email address is 8</p>
-                    <p> My phone number is 8</p>
-                    </div><div class="manager-card">
-                    <h1>Manager</h1>
-                    <p>My name is caleb </p>
-                    <p>My ID number is 78</p>
-                    <p>My email address is 7</p>
-                    <p> My phone number is 7</p>
+                    <p>My name is Catherine </p>
+                    <p>My ID number is 456</p>
+                    <p>My email address is catherine@manager.com</p>
+                    <p> My phone number is 567</p>
                     </div><!-- Each team card -->
         </div>
 
